...
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mat Okon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rG1-t1-MpW">
                                                            <rect key="frame" x="0.0" y="0.0" width="97" height="20.5"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visa ····4242" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pkW-1G-fMG">
                                                            <rect key="frame" x="0.0" y="35.5" width="97" height="20.5"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                    </subviews>
...
                            </tableView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="l7G-2S-JOr" userLabel="PayButtons">
                                <rect key="frame" x="16" y="621" width="343" height="30"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CFn-W4-6sK">
                                        <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
                                        <state key="normal" title="Pay with Card"/>
                                        <connections>
                                            <action selector="onTapPayWithCard:" destination="1hs-ab-I17" eventType="touchUpInside" id="UpE-vI-Avn"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OIu-70-Gx0">
                                <rect key="frame" x="16" y="336" width="343" height="66"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FvP-dH-Z1j">
                                        <rect key="frame" x="0.0" y="1" width="343" height="65"/>
                                        <state key="normal" title="Add Card"/>
                                        <connections>
                                            <action selector="onTapAddCard:" destination="1hs-ab-I17" eventType="touchUpInside" id="dnn-K7-9Z9"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
            </objects>
            <point key="canvasLocation" x="2943.1999999999998" y="911.69415292353835"/>
        </scene>
    </scenes>
    <resources>
        <image name="checkmark.png" width="50" height="50"/>
        <image name="keyboard-next" width="50" height="100"/>
    </resources>
</document>

