...
        navigationController?.pushViewController(cardViewController, animated: true)
    }
    
    @IBAction func onTapPayWithCard(_ sender: Any) {
        if let card = selectedCard as? CustomerCard {
            // Card from the merchant api
            let alert = UIAlertController(title: "Card id", message: "Your card id: \(card.id)", preferredStyle: .alert)
            self.addOkAlertButton(alert: alert)
            self.present(alert, animated: true, completion: nil)
        }
    }
    
    func addOkAlertButton(alert: UIAlertController) {
        let action = UIAlertAction(title: "OK", style: .default) { _ in
            alert.dismiss(animated: true, completion: nil)
        }
        alert.addAction(action)
    }
    
    override func viewDidLoad() {
...
